--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,29 +1,27 @@
-<body class="hack gruvbox-dark">
-  <br/>
-  <div class="container">
-    <nav class="gruvbox-dark">
-      <a class="gruvbox-dark">
-        <h2 class="nav-title">Subham Padhi   |   Software Engineer <br/>
-        =========================
-          </h2>
-      </a>
-      <ul class="list-unstyled">
-        <li>
-          <%= link_to "- Now" %>
-        </li>
-        <li>
-          <%= link_to "- Blog" %>
-        </li>
-        <li>
-          <%= link_to "- Links" %>
-        </li>
-        <li>
-          <%= link_to "- Support Me" %>
-        </li>
-        <li>
-          <%= link_to "- Contact Info" %>
-        </li>
-      </ul>
-    </nav>
+<body>
+<div class="header-container">
+  <h1>Yet Another Dev Blog</h1>
+  <h4>I share whatever I know</h4>
+</div>
+
+<nav class="site-nav">
+  <div class="site-nav-left">
+    <ul class="nav">
+      <li class="nav-items">Home</li>
+      <li class="nav-items">Blog</li>
+      <li class="nav-items">About</li>
+    </ul>
   </div>
+
+  <div class="site-nav-right">
+    <ul class="nav">
+      <li class="nav-items">Twitter</li>
+      <li class="nav-items">Instagram</li>
+      <li class="nav-items">FB</li>
+      <li class="nav-items">GitHub</li>
+    </ul>
+  </div>
+</nav>
+<div class="separator-line"></div>
+
 </body>
